result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: result
  name: result
spec:
  ingressClassName: traefik
  rules:
  - host: result.k8s.lab
    http:
      paths:
      - pathType: "Prefix"
        path: "/"
        backend:
          service:
            name: result
            port:
              number: 80
